--- a/메인 작업물/home.css
+++ b/메인 작업물/home.css
@@ -1,48 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-:root {
-    /*color*/
-    --color-black: #1C1C1F;
-    --color-lightblue: #5383E8;
-    --color-deepblue: #27344E;
-    --color-orange: #FEB902;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    background-color: var(--color-black);
-    font-family: 'Poppins';
-}
-
-nav {
-    background-color: var(--color-deepblue);
-}
-
-#nav-title {
-    color: white;
-    font-weight: 700;
-    font-size: 21px;
-}
-
-.navbar-nav .nav-item>a {
-    color: var(--color-lightblue);
-    opacity: 0.5;
-    transition: all .5s ease-in-out;
-}
-
-.navbar-nav .nav-item>a:hover {
-    opacity: 1;
-}
-
-.navbar-nav .nav-item .active {
-    opacity: 1;
-}
-
 .search-bar {
     margin: 300px auto 0 auto;
     width: 700px;
@@ -56,24 +11,34 @@ nav {
     margin-bottom: 30px;
 }
 
-.input-group {
-    width: 700px;
+.search-bar>form {
+    display: flex;
 }
 
-.input-group>input {
+.search-bar>form>input {
+    width: 700px;
     height: 70px;
-    border-radius: 40px;
     background-color: var(--color-black);
     border-right: none;
     padding: 20px;
     color: white;
+    border: none;
+    border-bottom: 1px solid white;
     transition: all .5s ease-in-out;
+    font-size: 20px;
 }
 
-.input-group>input:focus {
+.search-bar>form>input:focus {
+    outline: none;
+    border-bottom: 1px solid var(--color-lightblue);
+}
+
+.search-bar>form>button {
     background-color: transparent;
     border: none;
     color: white;
+    font-size: 30px;
+    margin-left: 20px;
 }
 
 .input-group>span {
