--- a/메인 작업물/style.css
+++ b/메인 작업물/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbit&display=swap');
 
 :root {
     /*color*/
@@ -14,9 +15,13 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     background-color: var(--color-black);
-    font-family: 'Poppins';
+    font-family: 'Poppins', 'Orbit';
 }
 
 nav {
