--- a/메인 작업물 v.2/style.css
+++ b/메인 작업물 v.2/style.css
@@ -34,6 +34,10 @@ nav {
     font-size: 21px;
 }
 
+#nav-title:hover {
+    cursor: default;
+}
+
 .navbar-nav .nav-item>a {
     color: var(--color-lightblue);
     opacity: 0.5;
